objects/Milestone1_Task__c.object
<CustomObject>
    <description>This object is a replica of the Old MS Task object(Miilestone1 Unmanaged package)</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>ProForce Oct &apos;14.</description>
        <inlineHelpText>When did the task actually end?</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <inlineHelpText>When did the task actually begin?</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Classify this task as appropriate for your use.</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of this task. A task is either in-complete or complete.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_vendor_name__c</fullName>
        <description>Tied to &quot;Type of Resource&quot;</description>
        <inlineHelpText>What is the vendor&apos;s name?</inlineHelpText>
        <label>Contractor vendor name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_sign_off_Product_rel_to_task__c</fullName>
        <description>Proforce CHK 11/2014</description>
        <inlineHelpText>Ascertain customer sign-off from Product related to Task</inlineHelpText>
        <label>Customer sign-off: Product rel to task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>Today() -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <inlineHelpText>How many days late is this task?</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>The date this task is due to be completed. Defaults to milestone due date if left blank.</inlineHelpText>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Complete__c</fullName>
        <formula>Due_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Balance__c</fullName>
        <formula>Estimated_Expense__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated hours - total hours</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Helper__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName &amp; &apos; &apos; &amp; Project_Milestone__r.Project__r.Name &amp; &apos; &apos; &amp; Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Oracle_Project_Code__c</fullName>
        <formula>IF(ISBLANK(Project_Milestone__r.Oracle_Project_Code__c), Project_Milestone__r.Project__r.Oracle_Project_Code__c, Project_Milestone__r.Oracle_Project_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Task_Code__c</fullName>
        <label>Oracle Task Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                    <default>true</default>
                    <label>1.0</label>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>8.0</fullName>
                </value>
                <value>
                    <fullName>9.0</fullName>
                </value>
                <value>
                    <fullName>10.0</fullName>
                </value>
                <value>
                    <fullName>11.0</fullName>
                </value>
                <value>
                    <fullName>12.0</fullName>
                </value>
                <value>
                    <fullName>13.0</fullName>
                </value>
                <value>
                    <fullName>14.0</fullName>
                </value>
                <value>
                    <fullName>15.0</fullName>
                </value>
                <value>
                    <fullName>16.0</fullName>
                </value>
                <value>
                    <fullName>17.0</fullName>
                </value>
                <value>
                    <fullName>18.0</fullName>
                </value>
                <value>
                    <fullName>19.0</fullName>
                </value>
                <value>
                    <fullName>20.0</fullName>
                </value>
                <value>
                    <fullName>21.0</fullName>
                </value>
                <value>
                    <fullName>22.0</fullName>
                </value>
                <value>
                    <fullName>23.0</fullName>
                </value>
                <value>
                    <fullName>24.0</fullName>
                </value>
                <value>
                    <fullName>25.0</fullName>
                </value>
                <value>
                    <fullName>26.0</fullName>
                </value>
                <value>
                    <fullName>27.0</fullName>
                </value>
                <value>
                    <fullName>28.0</fullName>
                </value>
                <value>
                    <fullName>29.0</fullName>
                </value>
                <value>
                    <fullName>30.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The predecessor task for this task if applicable.</inlineHelpText>
        <label>Predecessor Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Milestone1_Task__c.Project_Milestone__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project_Milestone__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipName>Successor_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_310, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)) 
&amp; ProjectId__c , TRIM(Project_Number__c) , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone2</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Old MS Tasks (Milestone2)</relationshipLabel>
        <relationshipName>Old_MS_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <inlineHelpText>The milestone that this task is assigned to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipName>Project_Tasks2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_Milestone__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_Milestone__r.Project__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <formula>Project_Milestone__r.Project__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Project_Milestone__r.Project__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>HYPERLINK(Project_Milestone__r.Project__c, Project_Milestone__r.Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_off_and_backup_config_uploaded__c</fullName>
        <description>Proforce CHK 11/2014</description>
        <inlineHelpText>Sign-off and backup configurations uploaded</inlineHelpText>
        <label>Sign-off and backup config uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_report_completed_and_uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proforce CHK 11/2014</description>
        <inlineHelpText>Site report completed and uploaded</inlineHelpText>
        <label>Site report completed and uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>When should this task start by?</inlineHelpText>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Email_Subject__c</fullName>
        <formula>Project_Milestone__r.Project__r.Project_Number__c &amp; &quot; &quot; &amp; 
LEFT( Project_Milestone__r.Project__r.Name, 40) &amp; &quot; &quot; &amp; 
LEFT( Name , 30)</formula>
        <label>Task Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_310, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)) 
&amp; Id , TRIM(Name) , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
        <label>Task Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Tentative-ACK</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed-ACK</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Information</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <inlineHelpText>Is this task billable?</inlineHelpText>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                    <default>true</default>
                    <label>Billable</label>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Support Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <inlineHelpText>Calculated from all child expense records</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>Milestone1_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Milestone1_Expense__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Resource__c</fullName>
        <inlineHelpText>Is this resource an employee or contractor?</inlineHelpText>
        <label>Type of Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imagine Employee</fullName>
                    <default>true</default>
                    <label>Imagine Employee</label>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Eclipse Tech Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Old MS Task</label>
    <nameField>
        <label>Old MS Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old MS Tasks</pluralLabel>
    <recordTypes>
        <fullName>Checklist_Items_for_section_6_3</fullName>
        <active>true</active>
        <label>Checklist Items for section 6.3</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>